--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,27 @@
+/* -------- ------- ------ ----- all ----- ------ ------- -------- */
 * {
   margin: 0;
   padding: 0;
 }
 body {
-  background-color: #fff;
+  background-color: #eee;
   font-family: sans-serif;
   font-size: 1.5em;
   max-width: 90%;
   margin: 0 auto;
 }
-h1 {
+.none {
+  display: none;
+}
+/* -------- ------- ------ ----- form ----- ------ ------- -------- */
+.title {
   text-align: center;
   background-color: #d6e738;
   margin-top: 0.5em;
   padding: 0.5rem;
   border-radius: 5px;
 }
-input {
+.pokemon__elegido, .buscar {
   outline: none;
   padding: 8px;
   font-weight: bold;
@@ -41,6 +46,7 @@ input {
 .buscar:hover {
   background-color: #48e;
 }
+/* -------- ------- ------ ----- main ----- ------ ------- -------- */
 .pokemon {
   display: grid;
   grid-template-columns: 1fr;
@@ -48,19 +54,43 @@ input {
   padding: 1rem;
 }
 .pokemon__list {
+  background-color: #d6e738 ;
   border: 3px solid #000;
   border-radius: 1rem;
   -webkit-box-shadow: 7px 9px 14px -7px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 7px 9px 14px -7px rgba(0, 0, 0, 0.75);
   box-shadow: 7px 9px 14px -7px rgba(0, 0, 0, 0.75);
   text-align: center;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 1fr 1fr;
+  /* align-items: center; */
 }
 .pokemon__name {
   text-transform: capitalize;
-  margin: 1rem 1rem 0 1rem;
   font-size: 2rem;
   font-weight: bold;
 }
 .pokemon__image {
   width: 10em;
+}
+.pokemon__right, .pokemon__left {
+  padding: 1em;
+}
+.pokemon__title {
+  font-size: 2rem;
+  margin-bottom: .5rem;
+}
+.pokemon__features {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+/* -------- ------- ------ ----- mediaqueries ----- ------ ------- -------- */
+
+@media screen and (max-width: 800px) {
+  .pokemon__list {
+    grid-template-columns: 1fr;
+    /* row-gap: 1rem; */
+  }
 }
