--- a/styles.css
+++ b/styles.css
@@ -35,23 +35,27 @@ body {
   border: 2px solid #000;
   padding: 6px;
   font-size: 1rem;
+  text-align: center;
 }
 .buscar {
   background-color: rgb(97, 152, 235);
+  border: 1px solid #000;
   padding-left: 20px;
   padding-right: 20px;
   cursor: pointer;
+  transition: transform .1s;
   /* font-size: 200px; */
 }
-.buscar:hover {
-  background-color: #48e;
+.buscar:hover, .buscar:focus {
+  background-color: rgb(25, 108, 233);
+  transform: scale(1.1);
 }
 /* -------- ------- ------ ----- main ----- ------ ------- -------- */
 .pokemon {
   display: grid;
   grid-template-columns: 1fr;
   /* gap: 1rem; */
-  padding: 1rem;
+  padding: 0 .5rem;
 }
 .pokemon__list {
   background-color: #d6e738 ;
@@ -92,5 +96,16 @@ body {
   .pokemon__list {
     grid-template-columns: 1fr;
     /* row-gap: 1rem; */
+  }
+  .form {
+    margin: 1rem auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    /* height: 100px; */
+    /* padding: .5rem; */
+  }
+  .pokemon__elegido {
+    margin-bottom: 1rem;
   }
 }
