--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ body {
 .pokemon__features {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  text-align: left;
 }
 
 /* -------- ------- ------ ----- mediaqueries ----- ------ ------- -------- */
