--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,25 @@
 /* -------- ------- ------ ----- all ----- ------ ------- -------- */
-* {
-  margin: 0;
-  padding: 0;
+:root {
+  /* --background-yellow: #d6e738; */
+  --background-yellow: linear-gradient(to right bottom, #d4e44a, #c9da35);
+  --button-color: rgb(97, 152, 235);
+  --button-color-hover: rgb(25, 108, 233);
 }
+
 body {
-  background-color: #eee;
+  background: #eee;
   font-family: sans-serif;
   font-size: 1.5em;
   max-width: 90%;
   margin: 0 auto;
+  padding: 0;
 }
 .none {
   display: none;
 }
 /* -------- ------- ------ ----- form ----- ------ ------- -------- */
 .header {
-  background-color: #d6e738;
+  background: var(--background-yellow);
   margin-top: 0.5em;
   border-radius: 5px;
   padding: 0.5rem;
@@ -27,6 +31,7 @@ body {
 }
 .header__title {
   text-align: center;
+  margin: 0;
 }
 .pokemon__elegido,
 .buscar {
@@ -46,28 +51,27 @@ body {
   text-align: center;
 }
 .buscar {
-  background-color: rgb(97, 152, 235);
+  background: var(--button-color);
   border: 1px solid #000;
   padding-left: 20px;
   padding-right: 20px;
   cursor: pointer;
   transition: transform 0.1s;
-  /* font-size: 200px; */
+  height: 100%;
 }
 .buscar:hover,
 .buscar:focus {
-  background-color: rgb(25, 108, 233);
+  background: var(--button-color-hover);
   transform: scale(1.1);
 }
 /* -------- ------- ------ ----- main ----- ------ ------- -------- */
 .pokemon {
   display: grid;
   grid-template-columns: 1fr;
-  /* gap: 1rem; */
   padding: 0 0.5rem;
 }
 .pokemon__list {
-  background-color: #d6e738;
+  background: var(--background-yellow);
   border: 3px solid #000;
   border-radius: 1rem;
   -webkit-box-shadow: 7px 9px 14px -7px rgba(0, 0, 0, 0.75);
@@ -82,18 +86,21 @@ body {
   text-transform: capitalize;
   font-size: 2rem;
   font-weight: bold;
+  margin: 0;
 }
 .pokemon__image {
   width: 10em;
+  height: auto;
 }
 .pokemon__right,
 .pokemon__left {
   padding: 1rem;
 }
+
 .pokemon__title {
   font-size: 2rem;
   margin-bottom: 0.5rem;
-  background-color: #0e0e0e;
+  background: #0e0e0e;
   color: #fff;
   border-radius: 5px;
 }
@@ -110,6 +117,60 @@ body {
   box-shadow: 0px 5px 3px 0px rgba(0, 0, 0, 0.75);
   padding: 3px 5px;
 }
+/* -------- ------- ------ ----- pokemonsList ----- ------ ------- -------- */
+.section-list {
+  /* height: auto; */
+  /* background: #ddd; */
+  margin: 1.5rem;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section-list__div {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 8rem;
+  grid-gap: 1.5rem;
+  align-items: center;
+
+  /* grid-row-end: auto; */
+  /* grid-row-end: auto; */
+  /* margin: 1rem; */
+  width: 100%;
+  height: auto;
+  /* background-color: red; */
+}
+.section-list__div-item {
+  border-radius: 5px;
+  height: 100%;
+  width: 100%;
+  background: var(--background-yellow);
+  transition: transform .3s;
+  /* transform: rotate3d(1, 1, -1, 13deg); */
+}
+.section-list__div-item:hover {
+  transform: rotate3d(1, 1, 1, 13deg) scale(1.05);
+  /* transform: rotate3d(1, 1, -1, 45deg); */
+}
+.section-list__button {
+  border-radius: 3px;
+  background: var(--button-color);
+  margin-top: 1.5rem;
+  padding: 8px;
+  width: 8rem;
+  outline: none;
+  border: 2px solid #000;
+  font-weight: bold;
+  font-size: .8rem;
+  transition: transform .1s;
+}
+.section-list__button:hover {
+  background: var(--button-color-hover);
+  transform: rotate(-2deg) scale(1.05);
+}
+
+
 /* -------- ------- ------ ----- mediaqueries ----- ------ ------- -------- */
 
 @media screen and (max-width: 800px) {
