--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 :root {
   /* --background-yellow: #d6e738; */
   --background-yellow: linear-gradient(to right bottom, #d4e44a, #c9da35);
+  /* --background-yellow: #ffe227; */
   --button-color: rgb(97, 152, 235);
   --button-color-hover: rgb(25, 108, 233);
 }
@@ -10,20 +11,29 @@ body {
   background: #eee;
   font-family: sans-serif;
   font-size: 1.5em;
-  max-width: 90%;
+  width: 90%;
   margin: 0 auto;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #4d375d;
+}
+.wrapper {
+  max-width: 1350px;
+  /* background-color: #000; */
 }
 .none {
   display: none;
 }
 /* -------- ------- ------ ----- form ----- ------ ------- -------- */
 .header {
-  background: var(--background-yellow);
+  background: #eb596e;
   margin-top: 0.5em;
   border-radius: 5px;
   padding: 0.5rem;
   position: relative;
+  width: 100%;
 }
 .header__logo {
   position: absolute;
@@ -70,7 +80,7 @@ body {
   grid-template-columns: 1fr;
   padding: 0 0.5rem;
 }
-.pokemon__list {
+.pokemon__div {
   background: var(--background-yellow);
   border: 3px solid #000;
   border-radius: 1rem;
@@ -81,6 +91,7 @@ body {
   display: grid;
   justify-content: center;
   grid-template-columns: 1fr 1fr;
+  /* height: auto; */
 }
 .pokemon__name {
   text-transform: capitalize;
@@ -99,7 +110,7 @@ body {
 
 .pokemon__title {
   font-size: 2rem;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0 0.8rem;
   background: #0e0e0e;
   color: #fff;
   border-radius: 5px;
@@ -109,6 +120,10 @@ body {
   grid-template-columns: 1fr 1fr;
   text-align: left;
   gap: 1rem;
+}
+.pokemon__features > p {
+  margin-block-start: .5em;
+  margin-block-end: .5em;
 }
 .pokemon__feature {
   border-bottom: 3px solid #0e0e0e;
@@ -131,7 +146,7 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 8rem;
-  grid-gap: 1.5rem;
+  grid-gap: 2rem;
   align-items: center;
 
   /* grid-row-end: auto; */
@@ -147,11 +162,23 @@ body {
   width: 100%;
   background: var(--background-yellow);
   transition: transform .3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  cursor: pointer;
   /* transform: rotate3d(1, 1, -1, 13deg); */
 }
 .section-list__div-item:hover {
   transform: rotate3d(1, 1, 1, 13deg) scale(1.05);
   /* transform: rotate3d(1, 1, -1, 45deg); */
+}
+.section-list__p {
+  margin: 0;
+}
+.section-list__img {
+  /* width: 50%; */
 }
 .section-list__button {
   border-radius: 3px;
@@ -164,6 +191,7 @@ body {
   font-weight: bold;
   font-size: .8rem;
   transition: transform .1s;
+  cursor: pointer;
 }
 .section-list__button:hover {
   background: var(--button-color-hover);
