--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 /* -------- ------- ------ ----- all ----- ------ ------- -------- */
 :root {
-  /* --background-yellow: #d6e738; */
-  --background-yellow: linear-gradient(to right bottom, #d4e44a, #c9da35);
+  /* --gradient-yellow: #d6e738; */
+  --gradient-yellow: linear-gradient(to right bottom, #d4e44a, #c9da35);
   --background-black: linear-gradient(to bottom, transparent, #0001);
-  /* --background-yellow: #ffe227; */
+  /* --gradient-yellow: #ffe227; */
   --button-color: rgb(97, 152, 235);
   --button-color-hover: rgb(25, 108, 233);
+  --gradient-pink: linear-gradient(to top, transparent, transparent, #eb596e);
+  /* --gradient-pink: #eb596e; */
   --color-pink: #eb596e;
+  --color-purple: #4d375d;
 }
 * {
   box-sizing: border-box;
@@ -23,14 +26,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #4d375d;
+  background: #4d375d;
 }
 .wrapper {
   max-width: 1350px;
-  /* background-color: #000; */
-}
-.none {
-  display: none;
 }
 /* -------- ------- ------ ----- form ----- ------ ------- -------- */
 .header {
@@ -43,6 +42,8 @@ body {
 }
 .header__logo {
   position: absolute;
+  left: 1%;
+  top: 10%;
   height: 80%;
 }
 .header__title {
@@ -50,7 +51,7 @@ body {
   margin: 0;
 }
 .pokemon__elegido,
-.buscar {
+.search {
   outline: none;
   padding: 8px;
   font-weight: bold;
@@ -59,24 +60,27 @@ body {
 .form {
   margin: 1em;
   max-width: 90%;
+  display: flex;
+  height: 1.4em;
+  
 }
 .pokemon__elegido {
-  border: 2px solid #000;
-  padding: 6px;
   font-size: 1rem;
+  border: 2px solid #000;
+  padding: 8px;
   text-align: center;
 }
-.buscar {
+.search {
+  font-size: .8rem;
   background: var(--button-color);
   border: 1px solid #000;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 10px 20px;
+  margin: 0 20px;
   cursor: pointer;
   transition: transform 0.1s;
-  height: 100%;
 }
-.buscar:hover,
-.buscar:focus {
+.search:hover,
+.search:focus {
   background: var(--button-color-hover);
   transform: scale(1.1);
 }
@@ -88,7 +92,7 @@ body {
   width: 100%;
 }
 .pokemon__div {
-  background: var(--background-yellow);
+  background: var(--gradient-yellow);
   border: 3px solid #000;
   border-radius: 1rem;
   -webkit-box-shadow: 7px 9px 14px -7px rgba(0, 0, 0, 0.75);
@@ -99,11 +103,10 @@ body {
   justify-content: center;
   grid-template-columns: 1fr 1fr;
   width: 100%;
-  /* height: auto; */
 }
 .pokemon__name {
   text-transform: capitalize;
-  font-size: 2rem;
+  font-size: 2em;
   font-weight: bold;
   margin: 0;
 }
@@ -146,8 +149,6 @@ body {
 }
 /* -------- ------- ------ ----- pokemonsList ----- ------ ------- -------- */
 .section-list {
-  /* height: auto; */
-  /* background: #ddd; */
   margin: 1.5rem;
   padding: 1.5rem;
   display: flex;
@@ -161,19 +162,14 @@ body {
   grid-auto-rows: 8rem;
   grid-gap: 2rem;
   align-items: center;
-
-  /* grid-row-end: auto; */
-  /* grid-row-end: auto; */
-  /* margin: 1rem; */
   width: 100%;
   height: auto;
-  /* background-color: red; */
 }
 .section-list__div-item {
   border-radius: 5px;
   height: 100%;
   width: 100%;
-  background: var(--background-yellow);
+  background: var(--gradient-yellow);
   transition: transform .3s;
   display: flex;
   flex-direction: column;
@@ -184,24 +180,23 @@ body {
   border-bottom: 4px solid var(--color-pink);
   border-right: 4px solid var(--color-pink);
   box-shadow: 3px 3px 5px;
-  /* backdrop-filter: blur(10px); */
 }
-.section-list__div-item:hover {
+.right:hover {
   transform: rotate3d(1, 1, 1, 13deg) scale(1.05);
-  /* transform: rotate3d(1, 1, -1, 45deg); */
+}
+.left:hover {
+  transform: rotate3d(1, 1, 1, -13deg) scale(1.05);
 }
 .section-list__p {
   margin: 0;
 }
-.section-list__img {
-  /* width: 50%; */
-}
 .section-list__button {
   border-radius: 3px;
   background: var(--button-color);
-  margin-top: 1.5rem;
   padding: 8px;
+  margin: 2.5rem 0 6rem;
   width: 8rem;
+  padding: 12px;
   outline: none;
   border: 2px solid #000;
   font-weight: bold;
@@ -213,7 +208,39 @@ body {
   background: var(--button-color-hover);
   transform: rotate(-2deg) scale(1.05);
 }
-
+.loader {
+  margin: 2.5rem 0 0;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  background: var(--gradient-pink);
+  border-radius: 100%;
+  /* border: 5px solid transparent;
+  border-top: 5px solid #000;
+  border-bottom: 5px solid #000;
+  border-right: 5px solid var(--gradient-pink);
+  border-left: 5px solid var(--gradient-pink); */
+  /* box-shadow: 1px 1px 10px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: loader 3s infinite;
+}
+.loader__div {
+  position: absolute;
+  height: 85px;
+  width: 85px;
+  background-color: var(--color-purple);
+  border-radius: 100%;
+}
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
 
 /* -------- ------- ------ ----- mediaqueries ----- ------ ------- -------- */
 
@@ -225,9 +252,11 @@ body {
 }
 
 @media screen and (max-width: 800px) {
+  .header {
+    font-size: .8em;
+  }
   .pokemon__div {
     grid-template-columns: 1fr;
-    /* row-gap: 1rem; */
   }
   .section-list__div {
     grid-template-columns: 1fr 1fr;
@@ -238,20 +267,34 @@ body {
   }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 490px) {
   body {
     font-size: 1.2em;
   }
-  .header__title {
-    text-align: right;
+  .form {
+    margin: 1rem auto;
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
   }
   .pokemon__elegido {
-    margin-bottom: 1rem;
+    margin-bottom: .8em;
+  }
+  .pokemon__name {
+    font-size: 1.2em;
+  }
+  .pokemon__image {
+    width: 8em;
+  }
+  .pokemon__title {
+    margin-top: 0;
+    font-size: 1.2em;
   }
   .pokemon__features {
     grid-template-columns: 1fr;
     text-align: center;
     gap: 0;
+    font-size: .8em;
   }
   .pokemon__feature {
     padding: 10px;
@@ -261,25 +304,21 @@ body {
     padding: 0.3rem;
   }
   .section-list__div  {
-    /* grid-template-columns: 1fr; */
     font-size: .8em;
   }
   .pokemon__feature > ul {
     margin: 3px 0 0 0;
     list-style: none;
     padding: 0;
-    /* text-align: ; */
   }
 }
 
 @media screen and (max-width: 390px) {
-  .form {
-    margin: 1rem auto;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
   .section-list {
     padding: 1.5rem .5rem;
   }
+}
+
+.hide {
+  display: none;
 }
