--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,12 @@ body {
 }
 .wrapper {
   max-width: 1350px;
+  width: 100%;
+  /* height: 100%; */
+  flex-shrink: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 /* -------- ------- ------ ----- form ----- ------ ------- -------- */
 .header {
@@ -62,6 +68,7 @@ body {
   max-width: 90%;
   display: flex;
   height: 1.4em;
+  align-self: flex-start;
   
 }
 .pokemon__elegido {
@@ -89,6 +96,7 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   padding: 0 0.5rem;
+  /* min-width: 100%; */
   width: 100%;
 }
 .pokemon__div {
@@ -154,6 +162,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 90%;
 }
 .section-list__div {
   display: grid;
