--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
   --button-color: rgb(97, 152, 235);
   --button-color-hover: rgb(25, 108, 233);
   --gradient-pink: linear-gradient(to top, transparent, transparent, #eb596e);
+  --gradient-pink-right: linear-gradient(to right, transparent, #eb596e, #eb596e);
   /* --gradient-pink: #eb596e; */
   --color-pink: #eb596e;
   --color-purple: #4d375d;
@@ -20,7 +21,7 @@ body {
   background: #eee;
   font-family: sans-serif;
   font-size: 1.5em;
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
   padding: 0;
   display: flex;
@@ -29,13 +30,14 @@ body {
   background: #4d375d;
 }
 .wrapper {
-  max-width: 1350px;
+  max-width: 1250px;
   width: 100%;
   /* height: 100%; */
   flex-shrink: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 /* -------- ------- ------ ----- form ----- ------ ------- -------- */
 .header {
@@ -95,9 +97,10 @@ body {
 .pokemon {
   display: grid;
   grid-template-columns: 1fr;
-  padding: 0 0.5rem;
+  /* padding: 0 0.5rem; */
   /* min-width: 100%; */
-  width: 100%;
+  width: 90%;
+  font-size: .8em;
 }
 .pokemon__div {
   background: var(--gradient-yellow);
@@ -114,7 +117,7 @@ body {
 }
 .pokemon__name {
   text-transform: capitalize;
-  font-size: 2em;
+  font-size: 1.8em;
   font-weight: bold;
   margin: 0;
 }
@@ -129,7 +132,7 @@ body {
 
 .pokemon__title {
   font-size: 2rem;
-  margin: 0.5rem 0 0.8rem;
+  margin: 0 0 0.8rem;
   background: #0e0e0e;
   color: #fff;
   border-radius: 5px;
@@ -154,6 +157,26 @@ body {
 }
 .pokemon__feature > ul {
   margin: 0 10px 0 0;
+}
+.div-main-loader {
+  height: 5px;
+  max-width: 80%;
+  width: 100%;
+  margin-top: 60px;
+  background: var(--color-pink);
+  /* overflow: hidden; */
+  /* display: none; */
+}
+.div-main-loader.active {
+  animation: main-loader 2.5s infinite;
+  background: var(--gradient-pink-right);
+}
+@keyframes main-loader {
+  0% {
+    transform: translateX(-100%);
+  } 100% {
+    transform: translateX(100%);
+  }
 }
 /* -------- ------- ------ ----- pokemonsList ----- ------ ------- -------- */
 .section-list {
@@ -189,6 +212,8 @@ body {
   border-bottom: 4px solid var(--color-pink);
   border-right: 4px solid var(--color-pink);
   box-shadow: 3px 3px 5px;
+  position: relative;
+  overflow: hidden;
 }
 .right:hover {
   transform: rotate3d(1, 1, 1, 13deg) scale(1.05);
@@ -198,6 +223,13 @@ body {
 }
 .section-list__p {
   margin: 0;
+}
+.section-list__div-rectangle {
+  height: 100%;
+  width: 10%;
+  position: absolute;
+  background: var(--color-pink);
+  transform: rotate(45deg) translateX(550%);
 }
 .section-list__button {
   border-radius: 3px;
@@ -260,7 +292,11 @@ body {
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 760px) {
+  .pokemon__div {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: row;
+  }
   .header {
     font-size: .8em;
   }
@@ -289,6 +325,9 @@ body {
   .pokemon__elegido {
     margin-bottom: .8em;
   }
+  .pokemon {
+    width: 100%;
+  }
   .pokemon__name {
     font-size: 1.2em;
   }
@@ -311,6 +350,9 @@ body {
   .pokemon__right,
   .pokemon__left {
     padding: 0.3rem;
+  }
+  .div-main-loader {
+    margin-top: 30px;
   }
   .section-list__div  {
     font-size: .8em;
