--- a/styles.css
+++ b/styles.css
@@ -91,14 +91,12 @@ body {
 .search:hover,
 .search:focus {
   background: var(--button-color-hover);
-  transform: scale(1.1);
+  transform: scale(0.96);
 }
 /* -------- ------- ------ ----- main ----- ------ ------- -------- */
 .pokemon {
   display: grid;
   grid-template-columns: 1fr;
-  /* padding: 0 0.5rem; */
-  /* min-width: 100%; */
   width: 90%;
   font-size: .8em;
 }
@@ -164,8 +162,6 @@ body {
   width: 100%;
   margin-top: 60px;
   background: var(--color-pink);
-  /* overflow: hidden; */
-  /* display: none; */
 }
 .div-main-loader.active {
   animation: main-loader 2.5s infinite;
@@ -179,6 +175,33 @@ body {
   }
 }
 /* -------- ------- ------ ----- pokemonsList ----- ------ ------- -------- */
+.section-types {
+  max-width: 80%;
+  width: 100%;
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: .6em;
+  height: auto;
+}
+.section-types__div {
+  height: .6em;
+  min-width: 14%;
+  width: auto;
+  margin: .5em 0;
+  text-align: center;
+}
+.section-types__div > div{
+  display: inline-block;
+  width: 10%;
+  height: 100%;
+}
+.section-types__div > p {
+  display: inline;
+  width: auto;
+  color: #fff;
+}
 .section-list {
   margin: 1.5rem;
   padding: 1.5rem;
@@ -230,6 +253,36 @@ body {
   position: absolute;
   background: var(--color-pink);
   transform: rotate(45deg) translateX(550%);
+}
+.grass {
+  background: #197;
+}
+.fire {
+  background: #c11;
+}
+.water {
+  background: #17c;
+}
+.bug {
+  background: #191;
+}
+.normal {
+  background: purple;
+}
+.poison {
+  background: #B080AD;
+}
+.electric {
+  background: #dab435;
+}
+.ground {
+  background: rgb(102, 73, 41);
+}
+.fairy {
+  background: #F89AAf;
+}
+.rock {
+  background: #888;
 }
 .section-list__button {
   border-radius: 3px;
@@ -290,6 +343,9 @@ body {
     font-size: .8em;
     grid-template-columns: repeat(3, 1fr);
   }
+  .section-types__div {
+    width: 20%;
+  }
 }
 
 @media screen and (max-width: 760px) {
@@ -302,6 +358,9 @@ body {
   }
   .pokemon__div {
     grid-template-columns: 1fr;
+  }
+  .section-types__div {
+    width: 25%;
   }
   .section-list__div {
     grid-template-columns: 1fr 1fr;
@@ -353,6 +412,9 @@ body {
   }
   .div-main-loader {
     margin-top: 30px;
+  }
+  .section-types__div {
+    width: 33%;
   }
   .section-list__div  {
     font-size: .8em;
